--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Jerrvon's Kitchen</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<h1>Our Menu</h1>
+	<div class="row">
 
+	<div class="container col-lg-4 col-md-6">
+		<section>
+			<div class="item1">Chicken</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer condimentum egestas velit sit amet consectetur. Sed quis magna scelerisque, ultrices nulla sed, pharetra quam. Pellentesque eros risus, dictum nec arcu sed, mattis rhoncus nisl.</p>
+		</section>
+	</div>
+
+	<div class="container col-lg-4 col-md-6">
+		<section>
+			<div class="item2">Beef</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer condimentum egestas velit sit amet consectetur. Sed quis magna scelerisque, ultrices nulla sed, pharetra quam. Pellentesque eros risus, dictum nec arcu sed, mattis rhoncus nisl.</p>
+		</section>
+	</div>	
+
+	<div class="container col-lg-4 col-md-12">
+		<section>
+			<div class="item3">Sushi</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer condimentum egestas velit sit amet consectetur. Sed quis magna scelerisque, ultrices nulla sed, pharetra quam. Pellentesque eros risus, dictum nec arcu sed, mattis rhoncus nisl.</p>
+		</section>
+	</div>
+
+	</div>
 </body>
 </html>
